quatroComp/y.output
Terminals unused in grammar

   KW_FLOAT
   KW_BOOL
   KW_DO
   TOKEN_ERROR


State 94 conflicts: 2 shift/reduce
State 95 conflicts: 2 shift/reduce
State 96 conflicts: 2 shift/reduce
State 97 conflicts: 2 shift/reduce
State 98 conflicts: 2 shift/reduce
State 99 conflicts: 2 shift/reduce
State 100 conflicts: 2 shift/reduce
State 101 conflicts: 2 shift/reduce
State 102 conflicts: 2 shift/reduce
State 103 conflicts: 2 shift/reduce
State 104 conflicts: 12 shift/reduce
State 105 conflicts: 12 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: statement_block

    2 statement_block: statement statement_block
    3                | /* empty */

    4 statement: declaracao
    5          | funcao

    6 identifier: TK_IDENTIFIER

    7 declaracao: tipo identifier ';'
    8           | tipo identifier '[' LIT_INTEGER ']' ';'

    9 tipo: KW_INT
   10     | KW_CHAR

   11 funcao: tipo identifier '(' lista_parametros ')' bloco

   12 lista_parametros: parametro
   13                 | parametro ',' lista_parametros
   14                 | /* empty */

   15 parametro: tipo identifier

   16 bloco: '{' bloco_comandos '}'
   17      | comando ';'

   18 bloco_comandos: comando ';' bloco_comandos
   19               | comando

   20 comando: atribuicao
   21        | fluxo
   22        | chamada_funcao
   23        | KW_READ identifier
   24        | KW_PRINT aritmetica
   25        | KW_PRINT string
   26        | KW_PRINT '(' string ')'
   27        | KW_RETURN expressao
   28        | /* empty */

   29 chamada_funcao: identifier '(' lista_param_chamada ')'

   30 lista_param_chamada: identifier
   31                    | identifier ',' lista_param_chamada
   32                    | /* empty */

   33 atribuicao: identifier '=' expressao
   34           | identifier '[' expressao ']' '=' expressao

   35 expressao: identifier
   36          | identifier '[' expressao ']'
   37          | literal
   38          | logica
   39          | aritmetica

   40 literal: LIT_CHAR
   41        | LIT_STRING
   42        | LIT_FLOAT
   43        | LIT_FALSE
   44        | LIT_TRUE
   45        | LIT_INTEGER

   46 string: LIT_STRING

   47 aritmetica: '(' aritmetica ')'
   48           | expressao '+' expressao
   49           | expressao '-' expressao
   50           | expressao '*' expressao
   51           | expressao '/' expressao

   52 logica: '(' logica ')'
   53       | expressao OPERATOR_AND expressao
   54       | expressao OPERATOR_OR expressao
   55       | expressao OPERATOR_LE expressao
   56       | expressao OPERATOR_GE expressao
   57       | expressao OPERATOR_EQ expressao
   58       | expressao OPERATOR_NE expressao
   59       | expressao '<' expressao
   60       | expressao '>' expressao

   61 fluxo: KW_IF '(' expressao ')' KW_THEN bloco
   62      | KW_IF '(' expressao ')' KW_THEN bloco KW_ELSE bloco
   63      | KW_WHILE '(' expressao ')' bloco


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 26 29 47 52 61 62 63
')' (41) 11 26 29 47 52 61 62 63
'*' (42) 50
'+' (43) 48
',' (44) 13 31
'-' (45) 49
'/' (47) 51
';' (59) 7 8 17 18
'<' (60) 59
'=' (61) 33 34
'>' (62) 60
'[' (91) 8 34 36
']' (93) 8 34 36
'{' (123) 16
'}' (125) 16
error (256)
KW_INT (258) 9
KW_FLOAT (259)
KW_BOOL (260)
KW_CHAR (261) 10
KW_IF (262) 61 62
KW_THEN (263) 61 62
KW_ELSE (264) 62
KW_WHILE (265) 63
KW_DO (266)
KW_PRINT (267) 24 25 26
KW_RETURN (268) 27
KW_READ (269) 23
OPERATOR_LE (270) 55
OPERATOR_GE (271) 56
OPERATOR_EQ (272) 57
OPERATOR_NE (273) 58
OPERATOR_AND (274) 53
OPERATOR_OR (275) 54
TK_IDENTIFIER (276) 6
LIT_INTEGER (277) 8 45
LIT_FLOAT (278) 42
LIT_FALSE (279) 43
LIT_TRUE (280) 44
LIT_CHAR (281) 40
LIT_STRING (282) 41 46
TOKEN_ERROR (283)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
programa (45)
    on left: 1, on right: 0
statement_block (46)
    on left: 2 3, on right: 1 2
statement (47)
    on left: 4 5, on right: 2
identifier (48)
    on left: 6, on right: 7 8 11 15 23 29 30 31 33 34 35 36
declaracao (49)
    on left: 7 8, on right: 4
tipo (50)
    on left: 9 10, on right: 7 8 11 15
funcao (51)
    on left: 11, on right: 5
lista_parametros (52)
    on left: 12 13 14, on right: 11 13
parametro (53)
    on left: 15, on right: 12 13
bloco (54)
    on left: 16 17, on right: 11 61 62 63
bloco_comandos (55)
    on left: 18 19, on right: 16 18
comando (56)
    on left: 20 21 22 23 24 25 26 27 28, on right: 17 18 19
chamada_funcao (57)
    on left: 29, on right: 22
lista_param_chamada (58)
    on left: 30 31 32, on right: 29 31
atribuicao (59)
    on left: 33 34, on right: 20
expressao (60)
    on left: 35 36 37 38 39, on right: 27 33 34 36 48 49 50 51 53 54
    55 56 57 58 59 60 61 62 63
literal (61)
    on left: 40 41 42 43 44 45, on right: 37
string (62)
    on left: 46, on right: 25 26
aritmetica (63)
    on left: 47 48 49 50 51, on right: 24 39 47
logica (64)
    on left: 52 53 54 55 56 57 58 59 60, on right: 38 52
fluxo (65)
    on left: 61 62 63, on right: 21


state 0

    0 $accept: . programa $end

    KW_INT   shift, and go to state 1
    KW_CHAR  shift, and go to state 2

    $default  reduce using rule 3 (statement_block)

    programa         go to state 3
    statement_block  go to state 4
    statement        go to state 5
    declaracao       go to state 6
    tipo             go to state 7
    funcao           go to state 8


state 1

    9 tipo: KW_INT .

    $default  reduce using rule 9 (tipo)


state 2

   10 tipo: KW_CHAR .

    $default  reduce using rule 10 (tipo)


state 3

    0 $accept: programa . $end

    $end  shift, and go to state 9


state 4

    1 programa: statement_block .

    $default  reduce using rule 1 (programa)


state 5

    2 statement_block: statement . statement_block

    KW_INT   shift, and go to state 1
    KW_CHAR  shift, and go to state 2

    $default  reduce using rule 3 (statement_block)

    statement_block  go to state 10
    statement        go to state 5
    declaracao       go to state 6
    tipo             go to state 7
    funcao           go to state 8


state 6

    4 statement: declaracao .

    $default  reduce using rule 4 (statement)


state 7

    7 declaracao: tipo . identifier ';'
    8           | tipo . identifier '[' LIT_INTEGER ']' ';'
   11 funcao: tipo . identifier '(' lista_parametros ')' bloco

    TK_IDENTIFIER  shift, and go to state 11

    identifier  go to state 12


state 8

    5 statement: funcao .

    $default  reduce using rule 5 (statement)


state 9

    0 $accept: programa $end .

    $default  accept


state 10

    2 statement_block: statement statement_block .

    $default  reduce using rule 2 (statement_block)


state 11

    6 identifier: TK_IDENTIFIER .

    $default  reduce using rule 6 (identifier)


state 12

    7 declaracao: tipo identifier . ';'
    8           | tipo identifier . '[' LIT_INTEGER ']' ';'
   11 funcao: tipo identifier . '(' lista_parametros ')' bloco

    '('  shift, and go to state 13
    ';'  shift, and go to state 14
    '['  shift, and go to state 15


state 13

   11 funcao: tipo identifier '(' . lista_parametros ')' bloco

    KW_INT   shift, and go to state 1
    KW_CHAR  shift, and go to state 2

    $default  reduce using rule 14 (lista_parametros)

    tipo              go to state 16
    lista_parametros  go to state 17
    parametro         go to state 18


state 14

    7 declaracao: tipo identifier ';' .

    $default  reduce using rule 7 (declaracao)


state 15

    8 declaracao: tipo identifier '[' . LIT_INTEGER ']' ';'

    LIT_INTEGER  shift, and go to state 19


state 16

   15 parametro: tipo . identifier

    TK_IDENTIFIER  shift, and go to state 11

    identifier  go to state 20


state 17

   11 funcao: tipo identifier '(' lista_parametros . ')' bloco

    ')'  shift, and go to state 21


state 18

   12 lista_parametros: parametro .
   13                 | parametro . ',' lista_parametros

    ','  shift, and go to state 22

    $default  reduce using rule 12 (lista_parametros)


state 19

    8 declaracao: tipo identifier '[' LIT_INTEGER . ']' ';'

    ']'  shift, and go to state 23


state 20

   15 parametro: tipo identifier .

    $default  reduce using rule 15 (parametro)


state 21

   11 funcao: tipo identifier '(' lista_parametros ')' . bloco

    KW_IF          shift, and go to state 24
    KW_WHILE       shift, and go to state 25
    KW_PRINT       shift, and go to state 26
    KW_RETURN      shift, and go to state 27
    KW_READ        shift, and go to state 28
    TK_IDENTIFIER  shift, and go to state 11
    '{'            shift, and go to state 29

    $default  reduce using rule 28 (comando)

    identifier      go to state 30
    bloco           go to state 31
    comando         go to state 32
    chamada_funcao  go to state 33
    atribuicao      go to state 34
    fluxo           go to state 35


state 22

   13 lista_parametros: parametro ',' . lista_parametros

    KW_INT   shift, and go to state 1
    KW_CHAR  shift, and go to state 2

    $default  reduce using rule 14 (lista_parametros)

    tipo              go to state 16
    lista_parametros  go to state 36
    parametro         go to state 18


state 23

    8 declaracao: tipo identifier '[' LIT_INTEGER ']' . ';'

    ';'  shift, and go to state 37


state 24

   61 fluxo: KW_IF . '(' expressao ')' KW_THEN bloco
   62      | KW_IF . '(' expressao ')' KW_THEN bloco KW_ELSE bloco

    '('  shift, and go to state 38


state 25

   63 fluxo: KW_WHILE . '(' expressao ')' bloco

    '('  shift, and go to state 39


state 26

   24 comando: KW_PRINT . aritmetica
   25        | KW_PRINT . string
   26        | KW_PRINT . '(' string ')'

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 45
    '('            shift, and go to state 46

    identifier  go to state 47
    expressao   go to state 48
    literal     go to state 49
    string      go to state 50
    aritmetica  go to state 51
    logica      go to state 52


state 27

   27 comando: KW_RETURN . expressao

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 55
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 28

   23 comando: KW_READ . identifier

    TK_IDENTIFIER  shift, and go to state 11

    identifier  go to state 57


state 29

   16 bloco: '{' . bloco_comandos '}'

    KW_IF          shift, and go to state 24
    KW_WHILE       shift, and go to state 25
    KW_PRINT       shift, and go to state 26
    KW_RETURN      shift, and go to state 27
    KW_READ        shift, and go to state 28
    TK_IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 28 (comando)

    identifier      go to state 30
    bloco_comandos  go to state 58
    comando         go to state 59
    chamada_funcao  go to state 33
    atribuicao      go to state 34
    fluxo           go to state 35


state 30

   29 chamada_funcao: identifier . '(' lista_param_chamada ')'
   33 atribuicao: identifier . '=' expressao
   34           | identifier . '[' expressao ']' '=' expressao

    '('  shift, and go to state 60
    '['  shift, and go to state 61
    '='  shift, and go to state 62


state 31

   11 funcao: tipo identifier '(' lista_parametros ')' bloco .

    $default  reduce using rule 11 (funcao)


state 32

   17 bloco: comando . ';'

    ';'  shift, and go to state 63


state 33

   22 comando: chamada_funcao .

    $default  reduce using rule 22 (comando)


state 34

   20 comando: atribuicao .

    $default  reduce using rule 20 (comando)


state 35

   21 comando: fluxo .

    $default  reduce using rule 21 (comando)


state 36

   13 lista_parametros: parametro ',' lista_parametros .

    $default  reduce using rule 13 (lista_parametros)


state 37

    8 declaracao: tipo identifier '[' LIT_INTEGER ']' ';' .

    $default  reduce using rule 8 (declaracao)


state 38

   61 fluxo: KW_IF '(' . expressao ')' KW_THEN bloco
   62      | KW_IF '(' . expressao ')' KW_THEN bloco KW_ELSE bloco

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 64
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 39

   63 fluxo: KW_WHILE '(' . expressao ')' bloco

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 65
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 40

   45 literal: LIT_INTEGER .

    $default  reduce using rule 45 (literal)


state 41

   42 literal: LIT_FLOAT .

    $default  reduce using rule 42 (literal)


state 42

   43 literal: LIT_FALSE .

    $default  reduce using rule 43 (literal)


state 43

   44 literal: LIT_TRUE .

    $default  reduce using rule 44 (literal)


state 44

   40 literal: LIT_CHAR .

    $default  reduce using rule 40 (literal)


state 45

   41 literal: LIT_STRING .
   46 string: LIT_STRING .

    ')'       reduce using rule 46 (string)
    ';'       reduce using rule 46 (string)
    '}'       reduce using rule 46 (string)
    $default  reduce using rule 41 (literal)


state 46

   26 comando: KW_PRINT '(' . string ')'
   47 aritmetica: '(' . aritmetica ')'
   52 logica: '(' . logica ')'

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 45
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 48
    literal     go to state 49
    string      go to state 66
    aritmetica  go to state 67
    logica      go to state 68


state 47

   35 expressao: identifier .
   36          | identifier . '[' expressao ']'

    '['  shift, and go to state 69

    $default  reduce using rule 35 (expressao)


state 48

   48 aritmetica: expressao . '+' expressao
   49           | expressao . '-' expressao
   50           | expressao . '*' expressao
   51           | expressao . '/' expressao
   53 logica: expressao . OPERATOR_AND expressao
   54       | expressao . OPERATOR_OR expressao
   55       | expressao . OPERATOR_LE expressao
   56       | expressao . OPERATOR_GE expressao
   57       | expressao . OPERATOR_EQ expressao
   58       | expressao . OPERATOR_NE expressao
   59       | expressao . '<' expressao
   60       | expressao . '>' expressao

    OPERATOR_LE   shift, and go to state 70
    OPERATOR_GE   shift, and go to state 71
    OPERATOR_EQ   shift, and go to state 72
    OPERATOR_NE   shift, and go to state 73
    OPERATOR_AND  shift, and go to state 74
    OPERATOR_OR   shift, and go to state 75
    '+'           shift, and go to state 76
    '-'           shift, and go to state 77
    '*'           shift, and go to state 78
    '/'           shift, and go to state 79
    '<'           shift, and go to state 80
    '>'           shift, and go to state 81


state 49

   37 expressao: literal .

    $default  reduce using rule 37 (expressao)


state 50

   25 comando: KW_PRINT string .

    $default  reduce using rule 25 (comando)


state 51

   24 comando: KW_PRINT aritmetica .
   39 expressao: aritmetica .

    ';'       reduce using rule 24 (comando)
    '}'       reduce using rule 24 (comando)
    $default  reduce using rule 39 (expressao)


state 52

   38 expressao: logica .

    $default  reduce using rule 38 (expressao)


state 53

   41 literal: LIT_STRING .

    $default  reduce using rule 41 (literal)


state 54

   47 aritmetica: '(' . aritmetica ')'
   52 logica: '(' . logica ')'

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 48
    literal     go to state 49
    aritmetica  go to state 67
    logica      go to state 68


state 55

   27 comando: KW_RETURN expressao .
   48 aritmetica: expressao . '+' expressao
   49           | expressao . '-' expressao
   50           | expressao . '*' expressao
   51           | expressao . '/' expressao
   53 logica: expressao . OPERATOR_AND expressao
   54       | expressao . OPERATOR_OR expressao
   55       | expressao . OPERATOR_LE expressao
   56       | expressao . OPERATOR_GE expressao
   57       | expressao . OPERATOR_EQ expressao
   58       | expressao . OPERATOR_NE expressao
   59       | expressao . '<' expressao
   60       | expressao . '>' expressao

    OPERATOR_LE   shift, and go to state 70
    OPERATOR_GE   shift, and go to state 71
    OPERATOR_EQ   shift, and go to state 72
    OPERATOR_NE   shift, and go to state 73
    OPERATOR_AND  shift, and go to state 74
    OPERATOR_OR   shift, and go to state 75
    '+'           shift, and go to state 76
    '-'           shift, and go to state 77
    '*'           shift, and go to state 78
    '/'           shift, and go to state 79
    '<'           shift, and go to state 80
    '>'           shift, and go to state 81

    $default  reduce using rule 27 (comando)


state 56

   39 expressao: aritmetica .

    $default  reduce using rule 39 (expressao)


state 57

   23 comando: KW_READ identifier .

    $default  reduce using rule 23 (comando)


state 58

   16 bloco: '{' bloco_comandos . '}'

    '}'  shift, and go to state 82


state 59

   18 bloco_comandos: comando . ';' bloco_comandos
   19               | comando .

    ';'  shift, and go to state 83

    $default  reduce using rule 19 (bloco_comandos)


state 60

   29 chamada_funcao: identifier '(' . lista_param_chamada ')'

    TK_IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 32 (lista_param_chamada)

    identifier           go to state 84
    lista_param_chamada  go to state 85


state 61

   34 atribuicao: identifier '[' . expressao ']' '=' expressao

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 86
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 62

   33 atribuicao: identifier '=' . expressao

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 87
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 63

   17 bloco: comando ';' .

    $default  reduce using rule 17 (bloco)


state 64

   48 aritmetica: expressao . '+' expressao
   49           | expressao . '-' expressao
   50           | expressao . '*' expressao
   51           | expressao . '/' expressao
   53 logica: expressao . OPERATOR_AND expressao
   54       | expressao . OPERATOR_OR expressao
   55       | expressao . OPERATOR_LE expressao
   56       | expressao . OPERATOR_GE expressao
   57       | expressao . OPERATOR_EQ expressao
   58       | expressao . OPERATOR_NE expressao
   59       | expressao . '<' expressao
   60       | expressao . '>' expressao
   61 fluxo: KW_IF '(' expressao . ')' KW_THEN bloco
   62      | KW_IF '(' expressao . ')' KW_THEN bloco KW_ELSE bloco

    OPERATOR_LE   shift, and go to state 70
    OPERATOR_GE   shift, and go to state 71
    OPERATOR_EQ   shift, and go to state 72
    OPERATOR_NE   shift, and go to state 73
    OPERATOR_AND  shift, and go to state 74
    OPERATOR_OR   shift, and go to state 75
    '+'           shift, and go to state 76
    '-'           shift, and go to state 77
    '*'           shift, and go to state 78
    '/'           shift, and go to state 79
    ')'           shift, and go to state 88
    '<'           shift, and go to state 80
    '>'           shift, and go to state 81


state 65

   48 aritmetica: expressao . '+' expressao
   49           | expressao . '-' expressao
   50           | expressao . '*' expressao
   51           | expressao . '/' expressao
   53 logica: expressao . OPERATOR_AND expressao
   54       | expressao . OPERATOR_OR expressao
   55       | expressao . OPERATOR_LE expressao
   56       | expressao . OPERATOR_GE expressao
   57       | expressao . OPERATOR_EQ expressao
   58       | expressao . OPERATOR_NE expressao
   59       | expressao . '<' expressao
   60       | expressao . '>' expressao
   63 fluxo: KW_WHILE '(' expressao . ')' bloco

    OPERATOR_LE   shift, and go to state 70
    OPERATOR_GE   shift, and go to state 71
    OPERATOR_EQ   shift, and go to state 72
    OPERATOR_NE   shift, and go to state 73
    OPERATOR_AND  shift, and go to state 74
    OPERATOR_OR   shift, and go to state 75
    '+'           shift, and go to state 76
    '-'           shift, and go to state 77
    '*'           shift, and go to state 78
    '/'           shift, and go to state 79
    ')'           shift, and go to state 89
    '<'           shift, and go to state 80
    '>'           shift, and go to state 81


state 66

   26 comando: KW_PRINT '(' string . ')'

    ')'  shift, and go to state 90


state 67

   39 expressao: aritmetica .
   47 aritmetica: '(' aritmetica . ')'

    ')'  shift, and go to state 91

    $default  reduce using rule 39 (expressao)


state 68

   38 expressao: logica .
   52 logica: '(' logica . ')'

    ')'  shift, and go to state 92

    $default  reduce using rule 38 (expressao)


state 69

   36 expressao: identifier '[' . expressao ']'

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 93
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 70

   55 logica: expressao OPERATOR_LE . expressao

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 94
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 71

   56 logica: expressao OPERATOR_GE . expressao

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 95
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 72

   57 logica: expressao OPERATOR_EQ . expressao

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 96
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 73

   58 logica: expressao OPERATOR_NE . expressao

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 97
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 74

   53 logica: expressao OPERATOR_AND . expressao

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 98
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 75

   54 logica: expressao OPERATOR_OR . expressao

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 99
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 76

   48 aritmetica: expressao '+' . expressao

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 100
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 77

   49 aritmetica: expressao '-' . expressao

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 101
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 78

   50 aritmetica: expressao '*' . expressao

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 102
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 79

   51 aritmetica: expressao '/' . expressao

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 103
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 80

   59 logica: expressao '<' . expressao

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 104
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 81

   60 logica: expressao '>' . expressao

    TK_IDENTIFIER  shift, and go to state 11
    LIT_INTEGER    shift, and go to state 40
    LIT_FLOAT      shift, and go to state 41
    LIT_FALSE      shift, and go to state 42
    LIT_TRUE       shift, and go to state 43
    LIT_CHAR       shift, and go to state 44
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 54

    identifier  go to state 47
    expressao   go to state 105
    literal     go to state 49
    aritmetica  go to state 56
    logica      go to state 52


state 82

   16 bloco: '{' bloco_comandos '}' .

    $default  reduce using rule 16 (bloco)


state 83

   18 bloco_comandos: comando ';' . bloco_comandos

    KW_IF          shift, and go to state 24
    KW_WHILE       shift, and go to state 25
    KW_PRINT       shift, and go to state 26
    KW_RETURN      shift, and go to state 27
    KW_READ        shift, and go to state 28
    TK_IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 28 (comando)

    identifier      go to state 30
    bloco_comandos  go to state 106
    comando         go to state 59
    chamada_funcao  go to state 33
    atribuicao      go to state 34
    fluxo           go to state 35


state 84

   30 lista_param_chamada: identifier .
   31                    | identifier . ',' lista_param_chamada

    ','  shift, and go to state 107

    $default  reduce using rule 30 (lista_param_chamada)


state 85

   29 chamada_funcao: identifier '(' lista_param_chamada . ')'

    ')'  shift, and go to state 108


state 86

   34 atribuicao: identifier '[' expressao . ']' '=' expressao
   48 aritmetica: expressao . '+' expressao
   49           | expressao . '-' expressao
   50           | expressao . '*' expressao
   51           | expressao . '/' expressao
   53 logica: expressao . OPERATOR_AND expressao
   54       | expressao . OPERATOR_OR expressao
   55       | expressao . OPERATOR_LE expressao
   56       | expressao . OPERATOR_GE expressao
   57       | expressao . OPERATOR_EQ expressao
   58       | expressao . OPERATOR_NE expressao
   59       | expressao . '<' expressao
   60       | expressao . '>' expressao

    OPERATOR_LE   shift, and go to state 70
    OPERATOR_GE   shift, and go to state 71
    OPERATOR_EQ   shift, and go to state 72
    OPERATOR_NE   shift, and go to state 73
    OPERATOR_AND  shift, and go to state 74
    OPERATOR_OR   shift, and go to state 75
    '+'           shift, and go to state 76
    '-'           shift, and go to state 77
    '*'           shift, and go to state 78
    '/'           shift, and go to state 79
    ']'           shift, and go to state 109
    '<'           shift, and go to state 80
    '>'           shift, and go to state 81


state 87

   33 atribuicao: identifier '=' expressao .
   48 aritmetica: expressao . '+' expressao
   49           | expressao . '-' expressao
   50           | expressao . '*' expressao
   51           | expressao . '/' expressao
   53 logica: expressao . OPERATOR_AND expressao
   54       | expressao . OPERATOR_OR expressao
   55       | expressao . OPERATOR_LE expressao
   56       | expressao . OPERATOR_GE expressao
   57       | expressao . OPERATOR_EQ expressao
   58       | expressao . OPERATOR_NE expressao
   59       | expressao . '<' expressao
   60       | expressao . '>' expressao

    OPERATOR_LE   shift, and go to state 70
    OPERATOR_GE   shift, and go to state 71
    OPERATOR_EQ   shift, and go to state 72
    OPERATOR_NE   shift, and go to state 73
    OPERATOR_AND  shift, and go to state 74
    OPERATOR_OR   shift, and go to state 75
    '+'           shift, and go to state 76
    '-'           shift, and go to state 77
    '*'           shift, and go to state 78
    '/'           shift, and go to state 79
    '<'           shift, and go to state 80
    '>'           shift, and go to state 81

    $default  reduce using rule 33 (atribuicao)


state 88

   61 fluxo: KW_IF '(' expressao ')' . KW_THEN bloco
   62      | KW_IF '(' expressao ')' . KW_THEN bloco KW_ELSE bloco
